# rust_web_assembly_draw_tests

./: Cargo.toml  LICENSE_MIT
src/: contracts.rs  lib.rs  model.rs  paint.rs
www/: index.html  index.js  package-lock.json  package.json
