[package]
name = "test"
version = "0.1.0"
authors = ["Anton Onikiychuk <a.onikiychuk@dodopizza.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
js-sys = "0.3.60"
wasm-bindgen = "0.2.83"
wasm-bindgen-futures = "0.4.30"
log = "0.4"
console_error_panic_hook = "0.1.6"
console_log = "0.2.0"
rand = {version = "0.6", features = ["wasm-bindgen"] }
tiny-skia = {version="0.8"}
tiny-skia-path = {version="0.8"}
derivative = {version="2.2.0"}
serde = {version="1.0", features = ["derive"]}
serde_json = {version="1.0"}
derive-getters = "0.2.0"
derive-new = "0.5"


[dependencies.web-sys]
version = "0.3.4"
features = [
  'Document',
  'Element',
  'Window',
  'console',
]

[dev-dependencies]
wasm-bindgen-test = "0.3.13"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
debug = true


[package.metadata.wasm-pack.profile.dev.wasm-bindgen]
# Should we enable wasm-bindgen's debug assertions in its generated JS glue?
debug-js-glue = true
# Should wasm-bindgen demangle the symbols in the "name" custom section?
demangle-name-section = true
# Should we emit the DWARF debug info custom sections?
dwarf-debug-info = true

[package.metadata.wasm-pack.profile.profiling.wasm-bindgen]
# Should we enable wasm-bindgen's debug assertions in its generated JS glue?
debug-js-glue = true
# Should wasm-bindgen demangle the symbols in the "name" custom section?
demangle-name-section = true
# Should we emit the DWARF debug info custom sections?
dwarf-debug-info = true